m/test/e2e: add TestE2EColdStartHA
This exercises full cluster shutdown and restart.

Change-Id: I546a46c7c8d34da23466b8b959076135c503b077
Reviewed-on: https://review.monogon.dev/c/monogon/+/2943
Tested-by: Jenkins CI
Reviewed-by: Tim Windelschmidt <tim@monogon.tech>

--- a/metropolis/test/e2e/BUILD.bazel
+++ b/metropolis/test/e2e/BUILD.bazel
@@ -43,6 +43,7 @@ go_test(
         "//metropolis/node/core/rpc",
         "//metropolis/pkg/localregistry",
         "//metropolis/proto/api",
+        "//metropolis/proto/common",
         "//metropolis/test/launch",
         "//metropolis/test/launch/cluster",
         "//metropolis/test/util",
