m/pkgs/localregistry: make runfile aware
Resolving paths from metropolis/... doesn't seem to work in some tests
(noticed while reworking E2E test package layout, where the test target
isn't in the same package as the localregistry_manifest target).

Change-Id: Id7d9283b9675cbab56ecdb83df6a4b0f5578e5f6
Reviewed-on: https://review.monogon.dev/c/monogon/+/2991
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/pkg/localregistry/BUILD.bazel
+++ b/metropolis/pkg/localregistry/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "@com_github_docker_distribution//manifest/schema2",
         "@com_github_docker_distribution//reference",
         "@com_github_opencontainers_go_digest//:go-digest",
+        "@io_bazel_rules_go//go/runfiles:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext",
     ],
 )
