m/test/e2e: split out tests into subpackages
The end-to-end tests have grown large enough that they merit their own
test targets. To make this more Go-idiomatic, we split away the tests
not just int separate Bazel targets, but also Go packages.

We also add per-test resource requests for Bazel, including a new
resource kind (iops). This makes the tests more deterministic and allows
use to eg. use --runs_per_test=10 to deflake test logic without hitting
resource contention issues.

//metropolis/test/e2e/suites/core:core_test                              PASSED in 35.1s
  Stats over 10 runs: max = 35.1s, min = 26.6s, avg = 31.9s, dev = 2.6s
//metropolis/test/e2e/suites/ha:ha_test                                  PASSED in 114.6s
  Stats over 10 runs: max = 114.6s, min = 90.1s, avg = 100.9s, dev = 7.6s
//metropolis/test/e2e/suites/ha_cold:ha_cold_test                        PASSED in 67.8s
  Stats over 10 runs: max = 67.8s, min = 55.5s, avg = 62.0s, dev = 4.1s
//metropolis/test/e2e/suites/kubernetes:kubernetes_test                  PASSED in 80.9s
  Stats over 10 runs: max = 80.9s, min = 58.8s, avg = 68.6s, dev = 6.0s

Change-Id: I8f31e09f599fd90c9941e2b69f36789817fa90ce
Reviewed-on: https://review.monogon.dev/c/monogon/+/3086
Reviewed-by: Jan Schär <jan@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/test/e2e/BUILD.bazel
+++ b/metropolis/test/e2e/BUILD.bazel
@@ -1,21 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 load("//metropolis/pkg/localregistry:def.bzl", "localregistry_manifest")
-
-go_library(
-    name = "e2e",
-    srcs = ["kubernetes_helpers.go"],
-    importpath = "source.monogon.dev/metropolis/test/e2e",
-    visibility = ["//metropolis/test:__subpackages__"],
-    deps = [
-        "@io_k8s_api//apps/v1:apps",
-        "@io_k8s_api//batch/v1:batch",
-        "@io_k8s_api//core/v1:core",
-        "@io_k8s_apimachinery//pkg/api/resource",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
-        "@io_k8s_apimachinery//pkg/util/intstr",
-        "@io_k8s_client_go//kubernetes",
-    ],
-)
 
 localregistry_manifest(
     name = "testimages_manifest",
@@ -24,35 +7,7 @@ localregistry_manifest(
         "//metropolis/test/e2e/httpserver:httpserver_image",
         "//metropolis/vm/smoketest:smoketest_image",
     ],
-)
-
-go_test(
-    name = "e2e_test",
-    size = "large",
-    srcs = ["main_test.go"],
-    data = [
-        ":testimages_manifest",
-        "//metropolis/node:image",
-        "//metropolis/node:swtpm_data",
-        "//third_party/edk2:firmware",
-    ],
-    embed = [":e2e"],
-    rundir = ".",
-    deps = [
-        "//metropolis/node",
-        "//metropolis/node/core/rpc",
-        "//metropolis/pkg/localregistry",
-        "//metropolis/proto/api",
-        "//metropolis/proto/common",
-        "//metropolis/test/launch",
-        "//metropolis/test/launch/cluster",
-        "//metropolis/test/util",
-        "@io_bazel_rules_go//go/runfiles:go_default_library",
-        "@io_k8s_api//core/v1:core",
-        "@io_k8s_apimachinery//pkg/api/errors",
-        "@io_k8s_apimachinery//pkg/api/resource",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
-        "@io_k8s_kubernetes//pkg/api/v1/pod",
-        "@org_golang_google_grpc//:go_default_library",
+    visibility = [
+        "//metropolis/test/e2e/suites:__subpackages__",
     ],
 )
