--- a/.bazelrc
+++ b/.bazelrc
@@ -88,3 +88,7 @@ build --stamp --workspace_status_command=./build/print-workspace-status.py
 
 # Load custom per-user settings.
 try-import %workspace%/.bazelrc.user
+
+test --experimental_allow_tags_propagation
+# Assume a 10k IOPS device (average NVMe) and 64GiB of RAM for test scheduling.
+test --local_extra_resources=iops=10000 --local_extra_resources=ram=64000
