--- a/metropolis/cli/dbg/BUILD.bazel
+++ b/metropolis/cli/dbg/BUILD.bazel
@@ -15,6 +15,7 @@ go_library(
         "@io_k8s_kubectl//pkg/cmd/plugin",
         "@io_k8s_kubectl//pkg/cmd/util",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//credentials/insecure",
     ],
 )
 
