metropolis/cli/pkg/context: replace with signal.NotifyContext
Change-Id: I457ccb83c7e25988755bb9463a8c83fc328a722b
Reviewed-on: https://review.monogon.dev/c/monogon/+/3081
Tested-by: Jenkins CI
Reviewed-by: Serge Bazanski <serge@monogon.tech>

--- a/cloud/bmaas/scruffy/cmd/BUILD.bazel
+++ b/cloud/bmaas/scruffy/cmd/BUILD.bazel
@@ -5,10 +5,7 @@ go_library(
     srcs = ["main.go"],
     importpath = "source.monogon.dev/cloud/bmaas/scruffy/cmd",
     visibility = ["//visibility:private"],
-    deps = [
-        "//cloud/bmaas/scruffy",
-        "//metropolis/cli/pkg/context",
-    ],
+    deps = ["//cloud/bmaas/scruffy"],
 )
 
 go_binary(
