--- a/metropolis/node/BUILD.bazel
+++ b/metropolis/node/BUILD.bazel
@@ -18,7 +18,10 @@ go_library(
         "//metropolis:__subpackages__",
         "@io_k8s_kubernetes//pkg/registry:__subpackages__",
     ],
-    deps = ["@com_github_vishvananda_netlink//:netlink"],
+    deps = [
+        "//metropolis/proto/common",
+        "@com_github_vishvananda_netlink//:netlink",
+    ],
 )
 
 # debug_build checks if we're building in debug mode and enables various debug features for the image.
