cloud: add multirun for cloud image push
This change adds multirun as dependency to allow us to push
multiple images with one bazel target.

Change-Id: Ie151286be6c2c254d4e87657787bb76a57faa129
Reviewed-on: https://review.monogon.dev/c/monogon/+/3204
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -19,6 +19,7 @@ bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "rules_pkg", version = "0.10.1")
 bazel_dep(name = "rules_oci", version = "1.7.6")
 bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
+bazel_dep(name = "rules_multirun", version = "0.9.0")
 
 oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
 
