--- a/metropolis/node/core/cluster/BUILD.bazel
+++ b/metropolis/node/core/cluster/BUILD.bazel
@@ -26,7 +26,7 @@ go_library(
         "//metropolis/proto/private",
         "//osbase/supervisor",
         "@com_github_cenkalti_backoff_v4//:backoff",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_protobuf//proto",
         "@org_golang_x_sys//unix",
     ],
