--- a/metropolis/node/core/mgmt/BUILD.bazel
+++ b/metropolis/node/core/mgmt/BUILD.bazel
@@ -20,7 +20,7 @@ go_library(
         "//osbase/logtree/proto",
         "//osbase/supervisor",
         "@com_github_vishvananda_netlink//:netlink",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_x_sys//unix",
@@ -37,7 +37,7 @@ go_test(
         "//osbase/logtree",
         "//osbase/logtree/proto",
         "@com_github_google_go_cmp//cmp",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//credentials/insecure",
         "@org_golang_google_grpc//test/bufconn",
         "@org_golang_google_protobuf//testing/protocmp",
