--- a/metropolis/cli/dbg/BUILD.bazel
+++ b/metropolis/cli/dbg/BUILD.bazel
@@ -14,7 +14,7 @@ go_library(
         "@io_k8s_kubectl//pkg/cmd",
         "@io_k8s_kubectl//pkg/cmd/plugin",
         "@io_k8s_kubectl//pkg/cmd/util",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//credentials/insecure",
     ],
 )
