--- a/metropolis/node/core/rpc/BUILD.bazel
+++ b/metropolis/node/core/rpc/BUILD.bazel
@@ -17,7 +17,7 @@ go_library(
         "//metropolis/proto/api",
         "//metropolis/proto/ext",
         "//osbase/logtree",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//credentials",
         "@org_golang_google_grpc//peer",
@@ -42,7 +42,7 @@ go_test(
         "//metropolis/proto/ext",
         "//metropolis/test/util",
         "//osbase/logtree",
-        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_grpc//test/bufconn",
