workspace: replace @go_sdk reference with @io_bazel_rules_go
When migrating to bzlmod for rules_go, the @go_sdk repository won't exist anymore.

Change-Id: I33ac300601330b627762cf8b89c079d339d7e012
Reviewed-on: https://review.monogon.dev/c/monogon/+/3222
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -20,7 +20,7 @@ gazelle(
 # Shortcut for the Go SDK
 alias(
     name = "go",
-    actual = "@go_sdk//:bin/go",
+    actual = "@io_bazel_rules_go//go",
     visibility = ["//visibility:public"],
 )
 
