--- a/.bazelrc
+++ b/.bazelrc
@@ -51,6 +51,9 @@ build --action_env=BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
 # Use new-style C++ toolchain resolution.
 build --incompatible_enable_cc_toolchain_resolution
 
+# Use new-style proto toolchain resolution.
+build --incompatible_enable_proto_toolchain_resolution
+
 # In our monorepo, we mostly ignore the host platform since we bring our own
 # execution environment. However, we still need to run a small number of tools
 # such as gazelle. We can just use rules_go's pure-Go platform. Attempting to
