--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -20,6 +20,7 @@ bazel_dep(name = "rules_pkg", version = "1.0.1")
 bazel_dep(name = "rules_oci", version = "1.8.0")
 bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
 bazel_dep(name = "rules_multirun", version = "0.9.0")
+bazel_dep(name = "rules_python", version = "0.34.0")
 
 oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
 
